--- a/index.html
+++ b/index.html
@@ -3,39 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> CV EN LIGNE</title>
     <link rel="stylesheet" href="CSS/style.css">
+
+   
 </head>
 <body>
-   <h1> <header> Dieudonné LAWSON</header>   </h1> 
-    <img src="https://img.a.transfermarkt.technology/portrait/big/342229-1682683695.jpg?lm=1" alt="ma photo de cv">
+    <header>
+        <h1>Votre Nom Prénom</h1>
+        <img src="https://s.hs-data.com/bilder/spieler/gross/284095.jpg?fallback=png" alt="Ma photo miniature">
+    </header>
+
     <main>
-        <section id="skills">
-            <h2> Mes compétences</h2> 
-            <ul>
-                <li> HTML</li>
-            <li> CSS </li>
-            <li> PHP </li>
-            <li> CANVA</li>
-            <li> ADOBE</li>
-            <li> SEO</li>
-            </ul>
-        </section>
-        <section id="xp">
-            <h2> Mon expérience</h2>
-            <li> Business Develo^pper chez Deloitte-2023-Actuel</li>
-            <li> Attaché commercial chez Demyfil 2008-2012</li>
-            <li> Chargé de communication chez Publicis 2012-2023</li>
-        </section>
-        <section id="education">
-            <h2> Ma formation</h2>
-            <ul>
-                <li>.Bachelor ingénierie numérique et stratégie marketing, 09/2022 – Actuel EPF (école D'ingénieur) – CACHAN </li>
-                <li> Baccalauréat scientifique, 10/2020 – 07/2021 Lycée Immaculée Conception – Libreville, Gabon </li>
-            </ul>
+
+        <section>
+            <h2>Mon profil</h2>
+            <p>Autonome, rigoureux et passionné, j'ai à cœur de répondre aux besoins de mes clients.</p>
+            <p>N'hésitez pas à prendre contact avec moi pour que nous puissions échanger sur votre futur projet.</p>
         </section>
         
+        <section>
+            <h2>Mon expérience</h2>
+            <ul>
+                <li>Business Developer chez Deloitte - 2023 - Actuel</li>
+                <li>Attaché commercial chez Demyfil - 2008 - 2012</li>
+                <li>Chargé de communication chez Publicis - 2012 - 2023</li>
+            </ul>
+        </section>
 
+        <section>
+            <h2>Mes compétences</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>PHP</li>
+                <li>CANVA</li>
+                <li>ADOBE</li>
+                <li>SEO</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Ma formation</h2>
+            <ul>
+                <li>Bachelor ingénierie numérique et stratégie marketing, 09/2022 – Actuel, EPF (école d'ingénieur) – CACHAN</li>
+                <li>Baccalauréat scientifique, 10/2020 – 07/2021, Lycée Immaculée Conception – Libreville, Gabon</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
