--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-
+   
    
 </head>
 <body>
     <header>
-        <h1>Votre Nom Prénom</h1>
-        <img src="https://s.hs-data.com/bilder/spieler/gross/284095.jpg?fallback=png" alt="Ma photo miniature">
+        <h1>Dieudonné LAWSON</h1>
+        <img src="https://s.hs-data.com/bilder/spieler/gross/284095.jpg?fallback=png" alt="Ma photo miniature" >
     </header>
 
     <main>
@@ -20,7 +20,7 @@
             <p>Autonome, rigoureux et passionné, j'ai à cœur de répondre aux besoins de mes clients.</p>
             <p>N'hésitez pas à prendre contact avec moi pour que nous puissions échanger sur votre futur projet.</p>
         </section>
-        
+
         <section>
             <h2>Mon expérience</h2>
             <ul>
