--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <title> MON CV </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
    
    
 </head>
@@ -12,6 +13,7 @@
     <header>
         <h1>Dieudonné LAWSON</h1>
         <img src="https://s.hs-data.com/bilder/spieler/gross/284095.jpg?fallback=png" alt="Ma photo miniature" >
+        
     </header>
 
     <main>
